Added styles for prototype browse page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,6 +5,7 @@
  *= require header-footer
  *= require text
  *= require ancillary-pages
+ *= require browse
  *= require accessibility
  *= require search
  *= require static-pages/homepage
