hardcoded links in fat footer

--- a/app/views/root/_fat_footer.html.erb
+++ b/app/views/root/_fat_footer.html.erb
@@ -28,113 +28,113 @@
 
     <div class="group">
       <div class="prototype-footer-section">
-        <h4><a href="#">Crime &amp; Justice</a></h4>
+        <h4><a href="/browse/crime-and-justice">Crime &amp; Justice</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Jury Service</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Report a crime or anti-social behaviour</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Prison Life</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Become a magistrate</a></li>
+          <li><a href="/jury-service">Jury Service</a></li>
+          <li><a href="/report-crime-anti-social-behaviour">Report a crime or anti-social behaviour</a></li>
+          <li><a href="/life-in-prison">Prison Life</a></li>
+          <li><a href="/become-magistrate">Become a magistrate</a></li>
         </ul>
-        <p><a href="#">More on Crime &amp; Justice…</a></p>
+        <p><a href="/browse/crime-and-justice">More on Crime &amp; Justice…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Driving</a></h4>
+        <h4><a href="/browse/driving">Driving</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Get a tax disc (vehicle licence)</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Calculate vehicle tax rates</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Book a driving theory test</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Book a practical driving test</a></li>
+          <li><a href="/car-tax-disc-vehicle-licence">Get a tax disc (vehicle licence)</a></li>
+          <li><a href="/calculate-vehicle-tax-rates">Calculate vehicle tax rates</a></li>
+          <li><a href="/book-a-driving-theory-test">Book a driving theory test</a></li>
+          <li><a href="/book-practical-driving-test">Book a practical driving test</a></li>
         </ul>
-        <p><a href="#">More on Driving…</a></p>
+        <p><a href="/browse/driving">More on Driving…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Education</a></h4>
+        <h4><a href="/browse/education">Education</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone"><a href="#">Student finance 2012-13</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Student finance calculator 2012-13</a></li>
-          <li class="prototype-filter-everyone"><a href="#">School term and holiday dates</a></li>
-          <li class="prototype-filter-everyone"><a href="#">The national curriculum</a></li>
+          <li><a href="/apply-for-student-finance-2012-13">Student finance 2012-13</a></li>
+          <li><a href="/student-finance-calculator">Student finance calculator 2012-13</a></li>
+          <li><a href="/school-term-holiday-dates">School term and holiday dates</a></li>
+          <li><a href="/national-curriculum">The national curriculum</a></li>
         </ul>
-        <p><a href="#">More on Education…</a></p>
+        <p><a href="/browse/education">More on Education…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Family</a></h4>
+        <h4><a href="/browse/family">Family</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone"><a href="#">Order a copy of a birth, death or marriage certificate</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Register a birth</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Get a divorce</a></li>
-          <li class="prototype-filter-everyone"><a href="#">What to do after someone dies</a></li>
+          <li><a href="/order-copy-birth-death-marriage-certificate">Order a copy of a birth, death or marriage certificate</a></li>
+          <li><a href="/register-birth">Register a birth</a></li>
+          <li><a href="/divorce">Get a divorce</a></li>
+          <li><a href="/after-a-death">What to do after someone dies</a></li>
         </ul>
-        <p><a href="#">More on Family…</a></p>
+        <p><a href="/browse/family">More on Family…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Housing</a></h4>
+        <h4><a href="/browse/housing">Housing</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone"><a href="#">Housing Benefit</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Council Tax Benefit</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Council housing</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Apply for council housing</a></li>
+          <li><a href="/housing-benefit">Housing Benefit</a></li>
+          <li><a href="/council-tax-benefit">Council Tax Benefit</a></li>
+          <li><a href="/council-housing">Council housing</a></li>
+          <li><a href="/apply-for-council-housing">Apply for council housing</a></li>
         </ul>
-        <p><a href="#">More on Housing…</a></p>
+        <p><a href="/browse/housing">More on Housing…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Life in the UK</a></h4>
+        <h4><a href="/browse/life-in-the-uk">Life in the UK</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Petition the government</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Register to vote</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Becoming a British citizen</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Disability rights</a></li>
+          <li><a href="/petition-government">Petition the government</a></li>
+          <li><a href="/register-to-vote">Register to vote</a></li>
+          <li><a href="/becoming-a-british-citizen">Becoming a British citizen</a></li>
+          <li><a href="/rights-disabled-person">Disability rights</a></li>
         </ul>
-        <p><a href="#">More on Life in the UK…</a></p>
+        <p><a href="/browse/life-in-the-uk">More on Life in the UK…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Money and Tax</a></h4>
+        <h4><a href="/browse/money-and-tax">Money and Tax</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Claim tax credits</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Tax credits calculator</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">State Pension: qualifying and claiming</a></li>
-          <li class="prototype-filter-everyone"><a href="#">File your Self Assessment tax return</a></li>
+          <li><a href="/claim-tax-credits">Claim tax credits</a></li>
+          <li><a href="/tax-credits-calculator">Tax credits calculator</a></li>
+          <li><a href="/state-pension">State Pension: qualifying and claiming</a></li>
+          <li><a href="/file-your-self-assessment-tax-return">File your Self Assessment tax return</a></li>
         </ul>
-        <p><a href="#">More on Money and Tax…</a></p>
+        <p><a href="/browse/money-and-tax">More on Money and Tax…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Neighbourhoods</a></h4>
+        <h4><a href="/browse/neighbourhoods">Neighbourhoods</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">UK online centres</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Organising a fete or street party</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Noise pollution from roads, trains or planes</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Controlling your dog in public</a></li>
+          <li><a href="/uk-online-centre-internet-access-computer-training">UK online centres</a></li>
+          <li><a href="/organise-fete-street-party">Organising a fete or street party</a></li>
+          <li><a href="/noise-pollution-road-train-plane">Noise pollution from roads, trains or planes</a></li>
+          <li><a href="/control-dog-public">Controlling your dog in public</a></li>
         </ul>
-        <p><a href="#">More on Neighbourhoods…</a></p>
+        <p><a href="/browse/neighbourhoods">More on Neighbourhoods…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Travel</a></h4>
+        <h4><a href="/browse/travel">Travel</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Plan your journey</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Get a passport quickly</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Hand luggage restrictions at UK airports</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Apply for or renew a European Health Insurance Card</a></li>
+          <li><a href="/plan-your-journey">Plan your journey</a></li>
+          <li><a href="/passport-quick">Get a passport quickly</a></li>
+          <li><a href="/hand-luggage-restrictions-at-uk-airports">Hand luggage restrictions at UK airports</a></li>
+          <li><a href="/apply-renew-european-health-insurance-card">Apply for or renew a European Health Insurance Card</a></li>
         </ul>
-        <p><a href="#">More on Travel…</a></p>
+        <p><a href="/browse/travel">More on Travel…</a></p>
       </div>
 
       <div class="prototype-footer-section">
-        <h4><a href="#">Work</a></h4>
+        <h4><a href="/browse/work">Work</a></h4>
         <ul class="prototype-footer-list">
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Find a job</a></li>
-          <li class="prototype-filter-everyone"><a href="#">Jobseeker&rsquo;s Allowance</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Calculate your redundancy pay</a></li>
-          <li class="prototype-filter-everyone prototype-filter-business"><a href="#">Your right to the minimum wage</a></li>
+          <li><a href="/find-job">Find a job</a></li>
+          <li><a href="/jobseekers-allowance">Jobseeker&rsquo;s Allowance</a></li>
+          <li><a href="/calculate-redundancy-pay">Calculate your redundancy pay</a></li>
+          <li><a href="/your-right-to-minimum-wage">Your right to the minimum wage</a></li>
         </ul>
-        <p><a href="#">More on Work…</a></p>
+        <p><a href="/browse/work">More on Work…</a></p>
       </div>
     </div>
   </div>
