Reduce font-size of pagination of b&s

--- a/app/assets/stylesheets/publisher.css.erb
+++ b/app/assets/stylesheets/publisher.css.erb
@@ -453,6 +453,7 @@ div.further-information.active a {
   line-height: 2.15em;
   height: 2.15em;
   position: relative;
+  font-size:0.862em;
 }
 
 #wrapper.programme .part-pagination li:first-child a {
